--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -118,3 +118,95 @@ footer .input-group-text{
   color: white;
   padding: 8px 17px;
 }
+
+/* Home  */
+/* banner */
+
+.main-banner-content {
+  top: 15%;
+  left: 5%;
+}
+
+.main-banner-content h4 {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #992893;
+  margin: 0 0 12;
+  letter-spacing: 0.3;
+  text-transform: uppercase;
+}
+
+.main-banner-content h5 {
+  font-size: 52px;
+  font-weight: 500;
+  line-height: 64px;
+  letter-spacing: -2px;
+  text-transform: none;
+}
+
+.main-banner-content p {
+  font-size: 18px;
+  line-height: 64px;
+  color: var(--color-blue-more);
+  letter-spacing: 0.4;
+}
+
+/* button banner */
+.button {
+  background-color: var(--color-blue-fort);
+  color: white;
+  font-size: 14px;
+  padding: 13px 33px;
+  border-radius: 15px;
+}
+
+.button:hover {
+  background-color: #1f134e;
+}
+
+/* banner2 */
+
+.small-banner-content {
+  top: 15%;
+  left: 10%;
+}
+
+.small-banner-content h4 {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #992893;
+  margin: 0 0 12;
+  letter-spacing: 0.3;
+  text-transform: uppercase;
+}
+
+.small-banner-content h5 {
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 34px;
+  letter-spacing: -2px;
+  text-transform: none;
+}
+
+.small-banner-content p {
+  font-size: 14px;
+  line-height: 22px;
+  color: var(--color-blue-more);
+  letter-spacing: 0.4;
+}
+
+/* button banner */
+.button {
+  background-color: var(--color-blue-fort);
+  color: white;
+  font-size: 14px;
+  padding: 13px 33px;
+  border-radius: 15px;
+}
+
+.button:hover {
+  background-color: #1f134e;
+}
+
